updated added 26-10-2024 notes added