@@ -7,12 +7,14 @@ import org.openqa.selenium.remote.RemoteWebDriver;
 import org.testng.annotations.Test;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class SeleniumGridTest {
 
     @Test(enabled = true)
-        public void Test() throws MalformedURLException {    // Set the desired capabilities
+        public void Test() throws MalformedURLException, URISyntaxException {    // Set the desired capabilities
 
         ChromeOptions options = new ChromeOptions();
         options.setBinary("Driver/chromedriver_binary.exe");
@@ -21,7 +23,7 @@ public class SeleniumGridTest {
         capabilities.setCapability(ChromeOptions.CAPABILITY, options);
 
         // URL of the Hub
-        WebDriver driver = new RemoteWebDriver(new URL("http://192.168.1.142:4444"), capabilities);
+        WebDriver driver = new RemoteWebDriver(new URI("http://192.168.1.142:4444").toURL(), capabilities);
         //java -jar selenium-server-standalone-<version>.jar hub
         //java -jar selenium-server-standalone-<version>.jar node -hub http://<hub_ip_address>:4444/grid/register
 
